tests/negative/sizeof_opaque.ax
module sizeof_opaque;

extern c {
    opaque struct File;
}

fn main() -> i32 {
    let size: usize = size_of(File);
    return cast(i32, size);
}
